syntax="proto3";

package proto.connection_app;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message ConnectionAppBodyRequest {
    string connection_name = 1;
    string connection_type = 2;
    string app_id = 3;
    string queue_id = 4;
    string status = 5;
}

message ConnectionAppRequest {
    int32 limit = 1;
    int32 offset = 2;
    string connection_name = 3;
    string connection_type = 4;
    string status = 5;
}

message ConnectionAppResponse {
    string code = 1;
    string message = 2;
    string id = 3;
}

message ConnectionAppStructResponse {
    string code = 1;
    string message = 2;
    repeated google.protobuf.Struct data = 3;
    int32 total = 4;
}

service ConnectionApp {
    rpc PostConnectionApp (ConnectionAppBodyRequest) returns (ConnectionAppResponse) {
        option (google.api.http) = {
            post : "/bss-chat/v1/connection-app",
            body: "*"
        };
    }
    rpc GetConnectionApp (ConnectionAppRequest) returns (ConnectionAppStructResponse) {
        option (google.api.http) = {
            get : "/bss-chat/v1/connection-app"
        };
    }
}